chore: upgrade repo url to https

--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -16,7 +16,7 @@
   <repositories>
     <repository>
       <id>vault-repo</id>
-      <url>http://nexus.hc.to/content/repositories/pub_releases</url>
+      <url>https://nexus.hc.to/content/repositories/pub_releases</url>
     </repository>
 
     <repository>
