--- a/spigot/pom.xml
+++ b/spigot/pom.xml
@@ -15,6 +15,11 @@
 
   <repositories>
     <repository>
+      <id>spigot-repo</id>
+      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
+    </repository>
+
+    <repository>
       <id>vault-repo</id>
       <url>https://nexus.hc.to/content/repositories/pub_releases</url>
     </repository>
